[package]
name = "sysctl"
version = "0.3.0"
authors = [
   "Johannes Lundberg <johalun0@gmail.com>",
   "Ivan Temchenko <ivan.temchenko@yandex.ua>",
   "Fabian Freyer <fabian.freyer@physik.tu-berlin.de>"
]
description = "Simplified interface to libc::sysctl"
keywords = ["sysctl", "freebsd", "macos"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/johalun/sysctl-rs"
documentation = "https://johalun.github.io/sysctl-rs/index.html"
edition = "2018"

[dependencies]
failure   = "^0.1"

[target.'cfg(any(target_os = "macos", target_os = "freebsd"))'.dependencies]
libc      = "^0.2.34"
byteorder = "^1.0.0"
bitflags  = "^1.0"

[features]
default = [ ]
